# CV-quantum4ccp

./: .gitignore  README.md  pyproject.toml  symbolic.ipynb
configs/: config02.txt  config03.txt  config04.txt
cpcol/: README.md  pyproject.toml
cpcol/data/: A.txt  b.txt
cpcol/src/cpcol/: collision_solver.py  cp_solver.py  friction_model.py  hgd_solver.py  sphere_system.py
cpcol/tools/: generate_matrices.py  sphere_simulator.py  sphere_simulator_hgd.py
runs/sphere_system_125/: .gitignore  config.yaml  generate_init.py  init_ref.txt
runs/sphere_system_216/: config.yaml  generate_init.py  init_ref.txt
runs/sphere_system_3/: .gitignore  config.yaml
runs/sphere_system_64/: .gitignore  README.md  config.yaml  generate_init.py  init_ref.txt
runs/sphere_system_8/: config.yaml  generate_init.py  init_ref.txt
scripts/: pauli_sparsity.py
