[project]
name = "cpcol"
version = "0.1.0"
description = "Complementarity formulation of rigid body collision"
dependencies = ["numpy", "pyyaml", "vtk"]
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
